--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -57,12 +57,12 @@
                             android:layout_height="@dimen/_29sdp"
                             android:layout_alignParentRight="true"
                             android:layout_gravity="center"
+                            app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:cardBackgroundColor="@color/white">
+                            app:layout_constraintTop_toTopOf="parent">
 
 
                             <ImageView
@@ -1080,17 +1080,24 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/layoutMainMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/layoutMainMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_quick_action_menu"></ImageView>
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_quick_action_menu"></ImageView>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -1119,26 +1126,34 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/layoutProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
+            <LinearLayout
+                android:id="@+id/layoutProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_dashboard_profile"></ImageView>
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingHorizontal="@dimen/_15sdp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="Profile"
-                android:textColor="@color/xdark_gray"
-                android:textSize="@dimen/_8ssp"></TextView>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_dashboard_profile"></ImageView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="Profile"
+                    android:textColor="@color/xdark_gray"
+                    android:textSize="@dimen/_8ssp"></TextView>
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
