--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -590,6 +590,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_8sdp"
                         android:orientation="vertical">
 
                         <androidx.recyclerview.widget.RecyclerView
