Enabled HighTicket and Avg ticket for custom date range, Microblink code commented

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -104,6 +104,7 @@
     <color name="cyn_color">#cccccc</color>
     <color name="profile_gray">#f0f4f5</color>
     <color name="loader_color">#0F6764</color>
+    <color name="mb_transparent">#00FFFFFF</color>
 
 
 </resources>
