--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -560,12 +560,13 @@
                                 </LinearLayout>
 
                                 <TextView
+                                    android:id="@+id/tv_user_status_update"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/_7sdp"
                                     android:layout_marginBottom="@dimen/_16sdp"
                                     android:fontFamily="@font/opensans_regular"
-                                    android:text="Our team is still reviewing your account. This process may take up to 3 business days."
+                                    android:text="@string/customer_under_review"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_11ssp" />
 
