--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -97,7 +97,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                                android:digits="@string/password_characters"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
                                 android:inputType="textPassword"
