Fixed the SAT Observations

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -161,7 +161,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                                    android:digits="@string/password_allow_characters"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionNext"
                                     android:inputType="textPassword"
@@ -279,7 +279,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                                android:digits="@string/password_allow_characters"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
                                 android:inputType="textPassword"
