--- a/app/src/main/res/layout/activity_add_external_bank_acc.xml
+++ b/app/src/main/res/layout/activity_add_external_bank_acc.xml
@@ -71,7 +71,8 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="@string/learn_more"
                     android:textColor="@color/primary_green"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:visibility="gone"/>
             </LinearLayout>
         </LinearLayout>
 
