--- a/app/src/main/res/layout/business_onboarding_open_new_account.xml
+++ b/app/src/main/res/layout/business_onboarding_open_new_account.xml
@@ -3,46 +3,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
         android:paddingEnd="@dimen/_21sdp">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_40sdp"
             android:layout_marginBottom="@dimen/_8sdp">
 
-        <ImageView
-            android:id="@+id/imv_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/_12sdp"
-            android:paddingTop="@dimen/_4sdp"
-            android:paddingBottom="@dimen/_5sdp"
-            android:src="@drawable/ic_x"
-            />
+            <ImageView
+                android:id="@+id/imv_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_12sdp"
+                android:paddingBottom="@dimen/_5sdp"
+                android:src="@drawable/ic_x" />
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/open_new_account"
-            android:fontFamily="@font/opensans_bold"
-            android:textSize="@dimen/_16ssp"
-            android:textColor="@color/black"
             android:layout_marginBottom="@dimen/_28sdp"
-            />
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/open_new_account"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Please select the account type you wish to \nopen:"
-            android:textSize="@dimen/_12ssp"
-            android:textColor="@color/primary_black"
-            android:fontFamily="@font/opensans_regular"
             android:layout_marginBottom="@dimen/_62sdp"
-            />
+            android:fontFamily="@font/opensans_regular"
+            android:text="Please select the account type you wish to \nopen:"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_12ssp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -103,10 +104,11 @@
 
         </LinearLayout>
     </LinearLayout>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bottom_onboard_image"
         android:scaleType="fitEnd"
-        />
+        android:src="@drawable/bottom_onboard_image"
+        android:visibility="gone" />
 </LinearLayout>
