--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -220,7 +220,7 @@
         android:id="@+id/successRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <!--        <RelativeLayout-->
         <!--            android:layout_width="match_parent"-->
