--- a/app/src/main/res/layout/withdraw_token_trans_inprogress.xml
+++ b/app/src/main/res/layout/withdraw_token_trans_inprogress.xml
@@ -135,7 +135,7 @@
             android:fontFamily="@font/opensans_regular"
             android:gravity="left"
             android:paddingLeft="@dimen/_10sdp"
-            android:text="We are processing your request, please allow a few \nminutes for your coyni Debit/Credit card purchase to be reflected in your token account. Learn More"
+            android:text="We are processing your request, please allow a few \nminutes for your coyni Debit/Credit card purchase to be reflected in your token account."
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_10sdp" />
 
