--- a/app/src/main/res/layout/buy_token_transaction_in_progress.xml
+++ b/app/src/main/res/layout/buy_token_transaction_in_progress.xml
@@ -175,7 +175,8 @@
                 android:gravity="left"
                 android:text="@string/learn"
                 android:textColor="@color/primary_green"
-                android:textSize="@dimen/_10sdp" />
+                android:textSize="@dimen/_10sdp"
+                android:visibility="gone"/>
         </LinearLayout>
 
     </LinearLayout>
