--- a/app/src/main/res/layout/buy_token_transaction_pending.xml
+++ b/app/src/main/res/layout/buy_token_transaction_pending.xml
@@ -168,7 +168,8 @@
                         android:gravity="left"
                         android:text="@string/learn"
                         android:textColor="@color/teal_200"
-                        android:textSize="@dimen/_10sdp" />
+                        android:textSize="@dimen/_10sdp"
+                        android:visibility="gone"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
