--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <RelativeLayout
@@ -138,11 +138,22 @@
                     android:orientation="vertical"
                     android:padding="@dimen/_11sdp">
 
+                    <TextView
+                        android:id="@+id/tvFeePer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Fee $1.00 "
+                        android:textColor="@color/xdark_gray"
+                        android:textSize="@dimen/_9ssp"></TextView>
+
                     <RelativeLayout
                         android:id="@+id/amountRL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_23sdp">
+                        android:layout_marginTop="@dimen/_14sdp">
 
                         <RelativeLayout
                             android:id="@+id/amountCL"
