--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -166,6 +166,21 @@
                         android:textColor="@color/xdark_gray"
                         android:textSize="@dimen/_9ssp" />
 
+                    <TextView
+                        android:id="@+id/tvFeePer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvLimit"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_toLeftOf="@+id/imgArrow"
+                        android:layout_toRightOf="@+id/imgBankIcon"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text=""
+                        android:textColor="@color/xdark_gray"
+                        android:textSize="@dimen/_9ssp"></TextView>
+
                     <ImageView
                         android:id="@+id/imgArrow"
                         android:layout_width="wrap_content"
@@ -231,16 +246,16 @@
                                     android:id="@+id/etAmount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:autofillHints="creditCardSecurityCode"
                                     android:background="@color/white"
+                                    android:clickable="false"
                                     android:cursorVisible="true"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center_vertical|right"
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
-                                    android:autofillHints="creditCardSecurityCode"
-                                    android:maxLength="@string/maxlength"
-                                    android:clickable="false"
                                     android:longClickable="false"
+                                    android:maxLength="@string/maxlength"
                                     android:singleLine="true"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
