--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -47,7 +47,7 @@
         <com.coyni.mapp.utils.MaskEditText.widget.MaskEditText
             android:id="@+id/companypnET"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:autofillHints="AUTOFILL_HINT_SMS_OTP"
             android:background="@android:color/transparent"
@@ -58,7 +58,7 @@
             android:importantForAutofill="noExcludeDescendants"
             android:inputType="number|textNoSuggestions"
             android:maxLines="1"
-            android:padding="14dp"
+            android:padding="@dimen/_14sdp"
             android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
