--- a/app/src/main/res/layout/activity_add_manual_bank_account.xml
+++ b/app/src/main/res/layout/activity_add_manual_bank_account.xml
@@ -42,11 +42,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
+        android:fillViewport="true"
         android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_5sdp">
 
             <LinearLayout
                 android:id="@+id/infoLL"
@@ -174,37 +176,55 @@
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/confirmRoutingNumberTIL"
-                    style="@style/TextInputLayout.OutlinedBox"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp"
-                    android:hint="@string/confirm_routing_number"
-                    android:textColorHint="@color/light_gray"
-                    app:boxStrokeColor="@color/primary_green"
-                    app:errorIconDrawable="@null"
-                    app:hintTextColor="@color/primary_green">
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/confirmRoutingNumberET"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/confirmRoutingNumberTIL"
+                        style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:imeOptions="actionNext"
-                        android:inputType="number"
-                        android:maxLength="13"
-                        android:maxLines="1"
-                        android:padding="@dimen/_14sdp"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                        android:singleLine="true"
-                        android:textColor="@color/text_color"
+                        android:layout_marginTop="@dimen/_14sdp"
+                        android:hint="@string/confirm_routing_number"
                         android:textColorHint="@color/light_gray"
-                        android:textCursorDrawable="@drawable/cursor_color"
-                        android:textIsSelectable="false"
-                        android:textSize="@dimen/_12ssp" />
+                        app:boxStrokeColor="@color/primary_green"
+                        app:errorIconDrawable="@null"
+                        app:hintTextColor="@color/primary_green">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/confirmRoutingNumberET"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:imeOptions="actionNext"
+                            android:inputType="number"
+                            android:maxLength="9"
+                            android:maxLines="1"
+                            android:padding="@dimen/_14sdp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                            android:singleLine="true"
+                            android:textColor="@color/text_color"
+                            android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:textIsSelectable="false"
+                            android:textSize="@dimen/_12ssp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageView
+                        android:id="@+id/endIcon1IV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="@dimen/_12sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:paddingTop="@dimen/_20sdp"
+                        android:src="@drawable/ic_blue_tick"
+                        android:visibility="gone" />
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/confirmRoutingNumberErrorLL"
@@ -254,8 +274,8 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="number"
-                        android:maxLength="13"
+                        android:inputType="numberPassword"
+                        android:maxLength="17"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -292,37 +312,56 @@
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/confirmAccNumberTIL"
-                    style="@style/TextInputLayout.OutlinedBox"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp"
-                    android:hint="@string/confirm_account_number"
-                    android:textColorHint="@color/light_gray"
-                    app:boxStrokeColor="@color/primary_green"
-                    app:errorIconDrawable="@null"
-                    app:hintTextColor="@color/primary_green">
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/confirmAccNumberET"
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/confirmAccNumberTIL"
+                        style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:imeOptions="actionNext"
-                        android:inputType="number"
-                        android:maxLength="13"
-                        android:maxLines="1"
-                        android:padding="@dimen/_14sdp"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                        android:singleLine="true"
-                        android:textColor="@color/text_color"
+                        android:layout_marginTop="@dimen/_14sdp"
+                        android:hint="@string/confirm_account_number"
                         android:textColorHint="@color/light_gray"
-                        android:textCursorDrawable="@drawable/cursor_color"
-                        android:textIsSelectable="false"
-                        android:textSize="@dimen/_12ssp" />
+                        app:boxStrokeColor="@color/primary_green"
+                        app:errorIconDrawable="@null"
+                        app:hintTextColor="@color/primary_green">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/confirmAccNumberET"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:imeOptions="actionNext"
+                            android:inputType="numberPassword"
+                            android:maxLength="17"
+                            android:maxLines="1"
+                            android:padding="@dimen/_14sdp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                            android:singleLine="true"
+                            android:textColor="@color/text_color"
+                            android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
+                            android:textIsSelectable="false"
+                            android:textSize="@dimen/_12ssp" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <ImageView
+                        android:id="@+id/endIcon2IV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="@dimen/_12sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:paddingTop="@dimen/_20sdp"
+                        android:src="@drawable/ic_blue_tick"
+                        android:visibility="gone" />
+
+                </RelativeLayout>
 
                 <LinearLayout
                     android:id="@+id/confirmAccNumberErrorLL"
@@ -348,36 +387,40 @@
                         android:textSize="@dimen/_10ssp" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_1sdp"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:layout_marginBottom="@dimen/_14sdp"
-                    android:background="@color/blue_light" />
-
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/addCV"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/infoLL"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_44sdp"
-                android:layout_marginBottom="@dimen/_46sdp"
-                app:cardBackgroundColor="@color/inactive_color"
-                app:cardCornerRadius="@dimen/_22sdp">
 
-                <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/infoLL"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:orientation="vertical">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/addCV"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/opensans_bold"
+                    android:layout_height="@dimen/_43sdp"
+                    android:layout_gravity="bottom"
                     android:gravity="center"
-                    android:text="@string/add"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
+                    app:cardBackgroundColor="@color/bg_inactive"
+                    app:cardCornerRadius="@dimen/_22sdp"
+                    app:cardElevation="0dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:text="@string/add"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12ssp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
         </RelativeLayout>
     </ScrollView>
-
 </LinearLayout>
