--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/et_bg_gray"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     android:orientation="vertical">
 
     <LinearLayout
