Default Account Changes, Notification Dot and fetching on resume business dashboar frag

--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -98,8 +98,9 @@
                             android:id="@+id/readStatusCV"
                             android:layout_width="@dimen/_6sdp"
                             android:layout_height="@dimen/_6sdp"
-                            android:layout_gravity="center"
+                            android:layout_gravity="top"
                             android:layout_marginRight="@dimen/_5sdp"
+                            android:layout_marginTop="@dimen/_5sdp"
                             app:cardBackgroundColor="@color/primary_color"
                             app:cardCornerRadius="5dp" />
 
@@ -111,7 +112,7 @@
                             android:layout_weight="1"
                             android:fontFamily="@font/opensans_bold"
                             android:gravity="center_vertical"
-                            android:text="May 8,2021"
+                            android:text="May 8,2021\n sd"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp"
                             android:visibility="visible" />
