--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -584,22 +584,20 @@
 
                         <LinearLayout
                             android:id="@+id/cpHelpLL"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:paddingTop="@dimen/_16sdp"
                             android:paddingBottom="@dimen/_16sdp">
 
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
 
                                 <TextView
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="0dp"
                                     android:layout_height="wrap_content"
+                                    android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:text="@string/get_help"
-                                    android:textColor="@color/primary_black"
+                                    android:textColor="@drawable/text_enable_disable"
                                     android:textSize="@dimen/_12ssp" />
 
                                 <ImageView
@@ -607,9 +605,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentRight="true"
                                     android:layout_centerInParent="true"
-                                    android:src="@drawable/ic_rightarrow" />
-
-                            </RelativeLayout>
+                                    android:src="@drawable/ic_right_arrow_ed" />
                         </LinearLayout>
 
 
