--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -65,7 +65,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_bold"
-                            android:text="@string/cu_profile_name"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_14ssp" />
 
@@ -162,7 +161,7 @@
                                     android:background="@color/profile_gray"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center"
-                                    android:text="VT"
+                                    android:text=""
                                     android:textColor="@color/primary_green"
                                     android:textSize="@dimen/_18ssp"
                                     android:visibility="visible" />
